--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,14 +43,13 @@ classifiers = [
 ]
 
 dependencies = [
-    "mcp>=1.0.0",
+    "fastmcp>=2.0.0",
 ]
 
 [project.optional-dependencies]
 openai = ["openai>=1.0"]
 edge = ["edge-tts>=6.0"]
-http = ["starlette>=0.35.0", "uvicorn>=0.27.0"]
-all = ["recorder[openai,edge,http]"]
+all = ["recorder[openai,edge]"]
 dev = [
     "pytest>=7.0",
     "pytest-asyncio>=0.21",
@@ -59,9 +58,8 @@ dev = [
 
 [project.scripts]
 recorder = "recorder.server:run"
-recorder-multi = "recorder.mcp_multiplexer:run"
 recorder-http = "recorder.http_server:main"
-recorder-http-multi = "recorder.http_multiplexer:main"
+recorder-proxy = "recorder.proxy_multiplexer:main"
 
 [project.urls]
 Homepage = "https://github.com/Schimuneck/demo-recorder-mcp"
