feat: centralize media storage and simplify tool parameters
- Rename get_video_url() to get_media_url() for video and audio files
- Add resolve_media_path() helper to convert filenames to full paths
- Update all tools to use filename instead of full path:
  - start_recording(filename)
  - text_to_speech(text, filename)
  - media_info(filename) - now prominently shows URL
  - concatenate_videos(filenames, output_filename)
  - adjust_video_to_audio(video_filename, audio_filename, output_filename)
- Add list_media_files() tool to list all media with URLs, sizes, durations
- Fix run-mcp.sh to use correct entry point (recorder-proxy)

--- a/docker-compose.http.yml
+++ b/docker-compose.http.yml
@@ -45,13 +45,18 @@ services:
       start_period: 60s
     labels:
       - "traefik.enable=true"
-      # MCP SSE endpoint - priority 1 (lower = checked last, so videos path takes precedence)
+      # MCP endpoint - priority 1 (lower = checked last, so videos path takes precedence)
       - "traefik.http.routers.mcp-api.rule=Host(`mcp.tutorialsbot.com`)"
       - "traefik.http.routers.mcp-api.entrypoints=websecure"
       - "traefik.http.routers.mcp-api.tls.certresolver=letsencrypt"
       - "traefik.http.routers.mcp-api.priority=1"
       - "traefik.http.routers.mcp-api.service=mcp-api-svc"
+      - "traefik.http.routers.mcp-api.middlewares=mcp-timeout@docker"
+      # MCP service with extended timeout - MCP tools can take minutes to process
       - "traefik.http.services.mcp-api-svc.loadbalancer.server.port=8080"
+      - "traefik.http.services.mcp-api-svc.loadbalancer.responseforwarding.flushinterval=100ms"
+      # Timeout middleware for MCP - 5 minutes for long-running operations
+      - "traefik.http.middlewares.mcp-timeout.headers.customrequestheaders.X-Forwarded-Timeout=300"
       # Video server endpoint - priority 2 (higher = checked first for /videos path)
       - "traefik.http.routers.mcp-videos.rule=Host(`mcp.tutorialsbot.com`) && PathPrefix(`/videos`)"
       - "traefik.http.routers.mcp-videos.entrypoints=websecure"
